# swagger.yaml
@@ -85,6 +85,11 @@ paths:
                 gender:
                   type: number
                   description: 0(NotSpecified), 1(Male), 2(Female)
+                interestIds:
+                  type: array
+                  description: min 3
+                  items:
+                    type: string
       responses:
         "200":
           description: Success
@@ -117,7 +122,7 @@ paths:
             schema:
               type: object
               required:
-               - photo
+                - photo
               properties:
                 photo:
                   type: string
@@ -183,6 +188,7 @@ paths:
               properties:
                 interestIds:
                   type: array
+                  description: min 3
                   items:
                     type: string
       responses:
@@ -373,4 +379,6 @@ paths:
                     _id:
                       type: string
                     title:
+                      type: string
+                    icon:
                       type: string
